Closed
Bug 1341108
Opened 8 years ago
Closed 8 years ago
Multi-channel audio doesn't work on ALSA-only builds
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox54 | --- | fixed |
People
(Reporter: jbeich, Unassigned)
References
Details
Attachments
(1 file)
Very few libcubeb backends implement .get_preferred_channel_layout even if the underlying audio system does support multi-channel. We probably want to force stereo for Tier3 builds.
$ echo "ac_add_options --disable-pulseaudio" >>.mozconfig
$ echo "ac_add_options --enable-alsa" >>.mozconfig
$ ./mach bootstrap
$ ./mach build
$ ./mach run https://www2.iis.fraunhofer.de/AAC/multichannel.html
Landry, does the page in comment 0 produce sound with sndio on Nightly for you?
Flags: needinfo?(landry)
Comment 2•8 years ago
|
||
Nightly segfaults at startup sooo... cant really tell for now :)
Flags: needinfo?(landry)
Comment hidden (mozreview-request) |
Comment on attachment 8839248 [details]
Bug 1341108 - Work around libcubeb backends without multi-channel support.
https://reviewboard.mozilla.org/r/113944/#review115458
Adjusting the pref based on platform seems like a bug. I'm not sure why Gecko thinks multi-channel works even if libcubeb says no.
Comment 7•8 years ago
|
||
mozreview-review |
Comment on attachment 8839248 [details]
Bug 1341108 - Work around libcubeb backends without multi-channel support.
https://reviewboard.mozilla.org/r/113944/#review115540
Attachment #8839248 -
Flags: review?(jyavenard) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6f92a2459194
Work around libcubeb backends without multi-channel support. r=jya
Comment 9•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•