Bug 1341108 - Work around libcubeb backends without multi-channel support. r=jya

MozReview-Commit-ID: H5ROBTMVkkE